Snippets/Simplified Panel Area/SimplifiedPanelArea.css
/* ... */
.party_e0cf27 {
  margin: 0;
}
.avatar_e0cf27 > .svg__44b0c {
  width: 20px;
  height: 20px;
}
.moreUsers_b2d72f {
  background: linear-gradient(315deg, hsl(var(--spotify-hsl) / .35), hsl(var(--spotify-hsl) / .75));
  color: var(--white);
}
/*ActivityPanel*/
.activityPanel_c48ade.activityPanel_c48ade {
  background: unset;
  border-radius: 0;
  box-sizing: border-box;
  display: flex;
  min-height: 56px;
  padding: var(--space-xs) var(--space-sm);
  transition: background-color .2s ease;
  &:first-child {
    border-radius: 7px 7px 0 0;
  }
  &:hover {
    background-color: var(--background-mod-normal);
    .actions__4cd01 {
      animation: pointerDelay .15s ease forwards;
      opacity: 1;
      top: -14px;
    }
  }
}
.gameWrapper__5dec7, .gameWrapper__8c6c2 {
  gap: var(--space-8);
}
.wrapper_a629d4, .gameIcon__5dec7, .gameIconWrapper__8c6c2 {
  margin-left: var(--panel-activityIcon-marginLeft);
  margin-right: var(--panel-activityIcon-marginRight);
}
.info__8c6c2, .info__5dec7 {
  margin-left: 0;
  a:first-child div {
    text-decoration: none;
    &:before {
      content: "";
      position: absolute;
      inset: 0;
    }
  }
}
.panelButtonContainer__4cd01 {
  display: contents;
  &:not(:only-child) .button__67645 {
    border-top-right-radius: unset !important;
    border-bottom-right-radius: unset !important;
    padding-right: 4px !important;
  }
}
/*VoicePanel*/
.wrapper_e131a9 {
  transition: background-color .2s ease;
  &:first-child {
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
  }
  &:hover {
    background-color: var(--background-mod-normal);
    .voiceButtonsContainer_e131a9, .actionButtons_e131a9 {
      animation: pointerDelay .15s ease forwards;
      opacity: 1;
      top: -14px;
    }
  }
}
.container_e131a9.container_e131a9 {
  align-items: center;
  box-sizing: border-box;
  flex-direction: unset;
  gap: var(--space-8);
  padding: var(--space-xs) var(--space-md);
  margin: 0;
  min-height: 56px;
}
.connection_e131a9 {
  flex: unset !important;
  min-width: 40px;
}
.rtcConnectionStatusWrapper__06d62 {
  padding-left: var(--panel-voiceOffset);
}
.ping__06d62 {
  height: 24px;
  margin-left: var(--panel-pingOffset);
  top: calc(50% - 12px);
  position: absolute;
  pointer-events: all;
  width: 24px;
}
.rtcConnectionStatus__06d62 {
  pointer-events: none;
  z-index: 1;
}
.labelWrapper__06d62 {
  pointer-events: all;
  > button {
    width: 100%;
    justify-content: unset;
  }
  .contents__201d5 {
    width: inherit;
  }
}
.rtcConnectionStatusLabel__06d62 [data-text-variant] {
  font-size: 14px;
  font-weight: 600;
  line-height: 18px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.channel_e131a9 {
  text-decoration: unset !important;
  div {
    font-size: 12px;
    font-weight: 400;
    line-height: 13px;
  }
  &:before {
    content: "";
    position: absolute;
    inset: 0;
  }
}
.voiceUsers_e131a9 {
  border-radius: var(--radius-md);
  flex: 1 0 auto;
  margin: -8px;
  padding: 8px !important;
  max-height: 36px;
  min-height: 20px;
  transition: .2s ease;
  pointer-events: none;
  &::-webkit-scrollbar {
    display: none;
  }
  &:has(div:nth-of-type(9)) {
    pointer-events: all;
    &:hover {
      background-color: var(--background-surface-highest);
      box-shadow: var(--shadow-border), var(--shadow-low);
      z-index: 3;
    }
    .voiceUsers__68617 {
      justify-content: unset;
    }
  }
}
.voiceUsers__68617 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
  gap: 0;
  justify-content: flex-end;
  max-width: 132px;
  min-height: 100%;
  row-gap: 4px;
  z-index: 1;
}
.avatarContainer__68617:not(:last-of-type,:nth-of-type(8n)) {
  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100' viewBox='0 0 20 20' width='100'%3E%3Cpath d='m18 0h-18v20h18c-2.8526705-2.3846085-4.6687684-5.979124-4.6687684-10 0-4.02087599 1.8160979-7.6153915 4.6687684-10z' fill-rule='evenodd'/%3E%3C/svg%3E");
  mask-size: 100%;
  margin-right: -4px;
}
.avatar__68617, .button__06eda {
  width: 20px;
  height: 20px;
  min-width: unset;
  min-height: unset;
  pointer-events: all;
}
.avatarIconOverlay__68617 {
  width: 12px;
  height: 12px;
  padding: 4px;
}
.actionButtons_e131a9.actionButtons_e131a9.actionButtons_e131a9.actionButtons_e131a9 {
  right: 72px;
  .disabledButtonWrapper__201d5 {
    height: unset;
    min-height: unset;
  }
  button {
    background: transparent;
    border: unset !important;
    border-radius: unset;
    color: var(--icon-secondary);
    height: unset;
    margin: unset;
    min-height: unset;
    min-width: unset;
    padding: 4px;
    width: unset;
    &.buttonActive_e131a9 {
      color: var(--green-360) !important;
      background-color: hsl(var(--green-360-hsl) / .1);
      &:hover {
        background-color: hsl(var(--green-360-hsl) / .2);
      }
    }
    &:first-child {
      border-top-left-radius: var(--radius-round);
      border-bottom-left-radius: var(--radius-round);
      padding-left: 6px;
    }
    .contents__201d5 {
      transition: scale .4s cubic-bezier(.16,1,.3,1);
    }
    .buttonContents_e131a9 {
      width: 16px !important;
      height: 16px !important;
    }
    &:hover {
      background-color: var(--background-modifier-hover);
      color: var(--interactive-hover);
      .contents__201d5 {
        scale: 1.1;
      }
    }
  }
  > div > button {
    border-top-left-radius: unset !important;
    border-bottom-left-radius: unset !important;
    border-top-right-radius: var(--radius-round);
    border-bottom-right-radius: var(--radius-round);
    padding-left: 4px !important;
    padding-right: 6px;
  }
}
/*UserPanel*/
.avatarWrapper__37e49.avatarWrapper__37e49 {
  background: transparent !important;
  border-radius: inherit;
  padding: var(--space-xs);
  padding-right: var(--space-md);
}
.density-compact .avatarWrapper__37e49.avatarWrapper__37e49 {
  padding-left: var(--space-4);
}
/* ... */

